--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -235,7 +235,7 @@
   .fourth {
     h1,
     p {
-      margin-left: 0; // Remove left margin for centered text
+      margin-left: 50px; // Remove left margin for centered text
     }
   }
 }
