--- a/src/app/pages/pagenotfound/pagenotfound.component.html
+++ b/src/app/pages/pagenotfound/pagenotfound.component.html
@@ -1,8 +1,13 @@
 <div class="error-page">
   <div class="error-content">
-    <h1 class="error-code">404</h1>
-    <h2 class="error-message">Oops! Page Not Found</h2>
-    <p class="error-description">It looks like the page you're looking for doesn't exist. It might have been moved or deleted.</p>
-    <a href="/" class="error-link">Return to Home</a>
+    <div class="container">
+      <h1 class="error-code">404</h1>
+      <h2 class="error-message">Oops! Something Went Wrong</h2>
+      <p class="error-description">"Don’t worry, we’re here to help you get back on track.</p>
+      <div class="btn"> <a href="/" class="error-link">Return Home</a></div>
+    </div>
+    <div class="main-image">
+      <img [src]="imageFirst" alt="error">
+    </div>
   </div>
 </div>
