--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,46 +1,47 @@
-<section class="first">
+<!-- HTML -->
+<section class="first animate-section fade-up">
   <div class="container">
     <div class="Intro">
       <h1>{{ titleFirst }}</h1>
       <p>{{ descriptionFirst }}</p>
-      <button class="btn btn-primary" >Download the App</button>
+      <button class="btn btn-primary">Download the App</button>
     </div>
-    <div class="main-image">
+    <div class="main-image animate-section fade-right">
       <img [src]="imageFirst" alt="Smart Energy">
     </div>
   </div>
 </section>
 
-<section class="second">
+<section class="second animate-section fade-left">
   <div class="container">
-    <div class="main-image">
+    <div class="main-image animate-section fade-right">
       <img [src]="imageSecond" alt="Energy Control">
     </div>
-    <div class="Det">
+    <div class="Det animate-section fade-left">
       <h1>{{ titleSecond }}</h1>
       <p>{{ descriptionSecond }}</p>
     </div>
   </div>
 </section>
 
-<section class="third">
+<section class="third animate-section fade-right">
   <div class="container">
-    <div class="Third">
+    <div class="Third animate-section fade-left">
       <h1>{{ titleThird }}</h1>
       <p>{{ descriptionThird }}</p>
     </div>
-    <div class="main-image">
+    <div class="main-image animate-section fade-right">
       <img [src]="imageThird" alt="Stay Informed">
     </div>
   </div>
 </section>
 
-<section class="fourth">
+<section class="fourth animate-section fade-left">
   <div class="container">
-    <div class="main-image">
+    <div class="main-image animate-section fade-right">
       <img [src]="imageFourth" alt="Never Miss a Beat">
     </div>
-    <div class="Fourth">
+    <div class="Fourth animate-section fade-left">
       <h1>{{ titleFourth }}</h1>
       <p>{{ descriptionFourth }}</p>
     </div>
