--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -20,9 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="features" routerLinkActive="active">Features</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" routerLink="howitworks" routerLinkActive="active">How it works</a>
-        </li> -->
+        </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="downloads" routerLinkActive="active">Downloads</a>
         </li>
