--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -27,7 +27,7 @@
         <ul class="Navigation">
           <li><a href="home">Home</a></li>
           <li><a href="features">Features</a></li>
-          <!-- <li><a href="howitworks">How it works</a></li> -->
+          <li><a href="howitworks">How it works</a></li>
           <li><a href="downloads">Downloads</a></li>
           <li><a href="contact">Contact</a></li>
           <li><a href="about">About us</a></li>
