--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -32,9 +32,11 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="about" routerLinkActive="active">About Us</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="buyproduct" routerLinkActive="active">Buy</a>
+        </li>
 
       </ul>
     </div>
   </div>
 </nav>
-
