buy and checkout

--- a/src/app/pages/buyproduct/buyproduct.component.scss
+++ b/src/app/pages/buyproduct/buyproduct.component.scss
@@ -17,6 +17,11 @@
   height: 600px;
   margin: 100px auto;
   background-color: #F9FFFE;
+  .image {
+    img {
+      width: 310px;
+    }
+  }
 
 
   h2 {
